--- a/static/sass/components/_graph.scss
+++ b/static/sass/components/_graph.scss
@@ -5,3 +5,21 @@
   margin: 25px auto;
   color: black;
 }
+
+#confirmed-graph {
+  width: 700px;
+  height: 400px;
+  background-color: transparent;
+  margin: 25px auto;
+  color: white;
+  grid-area: confirmed;
+}
+
+#fatalities-graph {
+  width: 700px;
+  height: 400px;
+  background-color: transparent;
+  margin: 25px auto;
+  color: white;
+  grid-area: fatality;
+}
