--- a/static/sass/pages/_dashboard.scss
+++ b/static/sass/pages/_dashboard.scss
@@ -8,6 +8,7 @@
     grid-template-areas:
       "sidenav header"
       "sidenav main";
+
     height: 100vh;
     background: rgb(255, 255, 255);
 }
@@ -83,13 +84,29 @@ a.sidenav__brand-link {
   .main {
     grid-area: main;
     background-color: #000000dc;
-  }
-  
-  .main-header {
+    
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 45% 1fr;
+    grid-template-areas:
+      "banner"
+      "graph";
+
+    &-content {
+      grid-area: graph;
+      display: grid;
+      grid-gap: 25px;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr;
+      grid-template-areas:
+      "confirmed fatality";
+    }
+
+    &-header {
     background: url(../img/sf.jpg) center no-repeat;
     background-size: cover;
     display: flex;
-
+    
     justify-content: space-between;
     // margin: 20px;
     padding: 20px;
@@ -102,9 +119,16 @@ a.sidenav__brand-link {
       color: white;
     }
   }
+}
 
-  .main-content {
-      margin: 20px;
-      background-color: whitesmoke;
-      height: 50px;
-  }
+// #confirmed-graph {
+//   text-align: center;
+//   color: white;
+//   font-size: 1.5rem;
+// }
+
+// #fatalities-graph {
+//   text-align: center;
+//   color: white;
+//   font-size: 1.5rem;
+// }
