--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+<meta charset="utf-8">
+
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
@@ -34,7 +36,138 @@
       <div class="main-header__updates">Recent Items</div>
     </div>
     <div class="main-content">
+      <div id="confirmed-graph"></div>
+      <div id="fatalities-graph"></div>
     </div>
 </main>
+{% block javascript %}
+  <script src="https://d3js.org/d3.v5.js" charset="utf-8""></script>
+  <script>
+    var data = [
+    {"date": "2020-04-03T07:00:00.000Z","num": 497},
+    {"date": "2020-04-02T07:00:00.000Z","num": 450},
+    {"date": "2020-04-01T07:00:00.000Z","num": 434},
+    {"date": "2020-03-31T07:00:00.000Z","num": 397},
+    {"date": "2020-03-30T07:00:00.000Z","num": 374},
+    {"date": "2020-03-29T07:00:00.000Z","num": 340},
+    {"date": "2020-03-28T07:00:00.000Z","num": 308},
+    {"date": "2020-03-27T07:00:00.000Z","num": 279},
+    {"date": "2020-03-26T07:00:00.000Z","num": 223},
+    {"date": "2020-03-25T07:00:00.000Z","num": 178}
+    ];
 
+    var time_parse = d3.timeParse("%Y-%m-%d");
+    var time_format = d3.timeFormat("%Y-%m-%d");
+    var margin = {top: 25, right: 0, bottom: 25, left: 0}
+    var chart_width = 600;
+    var chart_height = 400;
+    var padding = 50;
+
+
+  // Format Date
+  data.forEach(function(e, i){
+      data[i].date=time_parse(e.date);
+  });
+
+  // Scales
+  var x_scale = d3.scaleTime()
+      .domain([
+          d3.min(data, function(d) {
+              return d.date;
+          }),
+          d3.max(data, function(d) {
+              return d.date;
+          })
+      ])
+      .range([padding, chart_width - padding]);
+
+  var y_scale = d3.scaleLinear()
+      .domain([
+          0, d3.max(data, function(d) {
+              return d.num;
+          })
+      ])
+      .range([chart_height - padding, padding]);
+
+  // Create SVG
+  var svg = d3.select("#fatalities-graph")
+      .append("svg")
+      .attr("width", chart_width)
+      .attr("height", chart_height);
+
+  // Create Axes
+  var x_axis = d3.axisBottom(x_scale)
+      .ticks(10)
+      .tickFormat(time_format);
+
+  var y_axis = d3.axisLeft(y_scale)
+      .ticks(12);
+
+  svg.append("g")
+      .attr("transform", "translate(0," + (chart_height - padding) + ")")
+      .call(x_axis);
+
+  svg.append("g")
+      .attr("transform", "translate(" + padding + ",0)")
+      .call(y_axis);
+
+  // Create Line
+  var line = d3.line()
+      .defined(function(d){
+          return d.num >= 0 && d.num <= 100;
+      })
+      .x(function( d ){
+          return x_scale( d.date );
+      })
+      .y(function( d ){
+          return y_scale( d.num );
+      });
+ 
+  svg.append('path') // a line is one continous path
+        .datum(data) // datum binds all data to 'path' element all at once
+        .attr('fill', 'none')
+        .attr('stroke', 'white')
+        .attr('stroke-width', 2)
+        .attr('d', line);
+
+  // Create SVG
+  var svg    =   d3.select("#confirmed-graph")
+      .append("svg")
+      .attr("width", chart_width)
+      .attr("height", chart_height);
+
+  // Create Axes
+  var x_axis =   d3.axisBottom(x_scale)
+      .ticks(10)
+      .tickFormat(time_format);
+  var y_axis =   d3.axisLeft(y_scale)
+      .ticks(12);
+
+  svg.append("g")
+      .attr("transform", "translate(0," + (chart_height - padding) + ")")
+      .call(x_axis);
+      
+  svg.append("g")
+      .attr("transform", "translate(" + padding + ",0)")
+      .call(y_axis);
+  
+    // Create Line
+    var line = d3.line()
+      .defined(function(d){
+          return d.num >= 0 && d.num <= 100;
+      })
+      .x(function( d ){
+          return x_scale( d.date );
+      })
+      .y(function( d ){
+          return y_scale( d.num );
+      });
+
+
+
+  </script>
+
+</div>
+</div>
+{% endblock %}
 {% endblock %}
