--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -32,9 +32,9 @@
 
 <div class="results">
     <div class="results__item">
-        {% if cities != None %}
+        {% if counties != None %}
         <div class="results__item--city">
-            {{ cities.city_name }}, {{ states }}
+            {{ counties.county_name }}, {{ states }}
         </div>  
 
         <div id="chart"></div>  
