--- a/templates/index.html
+++ b/templates/index.html
@@ -39,17 +39,30 @@
             <i class="fas fa-phone-alt fa-2x"></i>&nbsp; Call in Sick &nbsp;
         </div>
     </div>
+    <div class="u-spacer-s">&nbsp;</div>
     <div class="country-stats">
         <div class="country-stats__header">United States</div>
-        <div class="country-stats__confirmed">Confirmed: {{ confirmed_total }}</div>
-        <div class="country-stats__fatality">Fatalities: {{ fatality_total }}</div>
+        <div class="country-stats__confirmed">Confirmed 
+            <div class="country-stats_confirmed--total">{{ confirmed_total }}</div>
+            
+        </div>
+        <div class="country-stats__fatality">Deaths
+             <div class="country-stats__fatality--total">{{ fatality_total }}</div>
+            </div>
     </div>
     <div class="searchbar">
         <form class="searchbar__form" action="/search-results" method="POST">
-            <input class="searchbar__search" action="/search-results" type="text" name="searchbar" placeholder="Enter a city:">
+            <input class="searchbar__search" action="/search-results" type="text" name="searchbar" placeholder="Enter a county name:">
         </form>
     </div>
 
- 
+    {% block javascript %}
+    <!-- Set country_confirmed as js global variable -->
+    <script type="text/javascript"> 
+        country_confirmed = {{ confirmed_total | tojson | safe }};
+        country_deaths = {{ fatality_total | tojson | safe }};
+    </script>
+    <script src="../static/js/time.js"></script>
+    {% endblock %}
 </body>
 {% endblock %}
