Removed js scripts

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,8 @@
     <body>
         {% block content %}
         {% endblock %}
-
-        <script src="../static/js/dashboard.js"></script>
-        <script src="../static/js/time.js"></script>
+        
+        {% block javascript %}
+        {% endblock %}
     </body>
 </html>
