--- a/static/sass/pages/_homepage.scss
+++ b/static/sass/pages/_homepage.scss
@@ -9,6 +9,44 @@
 // font-family: 'Major Mono Display', monospace;
 // font-family: 'Courier Prime', monospace;
 // font-family: 'Montserrat', sans-serif;
+.country-stats {
+    display: grid;
+    margin: 0 35%;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    grid-template-columns: 1fr, 1fr ;
+    grid-template-rows: 2fr, 1fr, 1fr;
+    grid-template-areas:
+    " header header header header"
+    " . confirmed deaths . "
+    " . c-total d-total .";
+    grid-gap: 20px;
+
+    &__header{
+        font-size: 3rem;
+        text-transform: uppercase;
+        grid-area: header;
+    }
+    &__confirmed {
+        
+        grid-area: confirmed;
+        font-size: 2rem;
+        text-transform: uppercase;
+        &--total {
+            grid-area: c-total;
+        }
+    }
+    &__fatality {
+        
+        grid-area: deaths;
+        font-size: 2rem;
+        text-transform: uppercase;
+        &--total {
+            grid-area: d-total;
+        }
+    }
+
+}
 .alert-message {
     text-align: center;
     font-family: 'Major Mono Display', monospace;
@@ -42,7 +80,6 @@
 }
 
 
-
 .the5 {
     font-family: 'Fredoka One', cursive;
     text-align: center;
@@ -53,9 +90,10 @@
     }
 
 }
+
 ul{list-style-type: none;}
 
-.datetime {
+.marquee {
     font-family: 'Major Mono Display', monospace;
     font-size: 1.2rem; 
     margin: 20px;  
@@ -63,8 +101,8 @@ ul{list-style-type: none;}
 
     height: 20px;
     position: fixed;
-    float: right;
-    animation: marquee 20s linear infinite;
+    float: left;
+    animation: marquee 35s linear infinite;
     &:hover {
         animation-play-state: paused;
     }
