--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,7 +40,7 @@
       <div id="fatalities-graph"></div>
     </div>
 </main>
-{% block javascript %}
+<!-- {% block javascript %}
   <script src="https://d3js.org/d3.v5.js" charset="utf-8""></script>
   <script>
     var data = [
@@ -162,12 +162,9 @@
       .y(function( d ){
           return y_scale( d.num );
       });
-
-
-
   </script>
 
 </div>
 </div>
-{% endblock %}
+{% endblock %} -->
 {% endblock %}
