--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,7 +9,7 @@
         <i class="fas fa-bars"></i>
       </div>
   <header class="header">
-    <div class="header__time">{{ current_date }}</div>
+    <div class="header__date"></div>
     <a class="header__logout" href="/logout">Logout</a>
   </header>
 
@@ -24,8 +24,7 @@
   
        <ul class="sidenav__list">
           <li class="sidenav__list-item">San Francisco, CA</li>
-          <li class="sidenav__list-item">San Jose, CA</li>
-          <li class="sidenav__list-item">Valdosta, GA</li>
+          <li class="sidenav__list-item">New York, NY</li>
         </ul>
     </div>
   </aside>
@@ -33,6 +32,7 @@
   <main class="main">
     <div class="main-header">
       <div class="main-header__heading">Hello {{username.title()}}! </div>
+      <div class="main-header__time"></div>
       <div class="main-header__updates">Recent Items</div>
     </div>
     <div class="main-content">
@@ -40,8 +40,9 @@
       <div id="fatalities-graph"></div>
     </div>
 </main>
-<!-- {% block javascript %}
-  <script src="https://d3js.org/d3.v5.js" charset="utf-8""></script>
+{% block javascript %}
+<script src="../static/js/dashboard.js"></script>
+  <!-- <script src="https://d3js.org/d3.v5.js" charset="utf-8""></script>
   <script>
     var data = [
     {"date": "2020-04-03T07:00:00.000Z","num": 497},
@@ -165,6 +166,6 @@
   </script>
 
 </div>
-</div>
-{% endblock %} -->
+</div> -->
+{% endblock %} 
 {% endblock %}
