--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,6 +70,9 @@ a.link__login {
 .u-text-center {
   text-align: center; }
 
+.u-spacer-xl {
+  height: 250px; }
+
 .u-spacer-l {
   height: 200px; }
 
