--- a/static/sass/base/_utilities.scss
+++ b/static/sass/base/_utilities.scss
@@ -2,6 +2,7 @@
 .u-font-blue {color: $color-1;}
 .u-font-white {color:white;}
 .u-text-center {text-align: center;}
-.u-spacer-l {height: 200px;}
+.u-spacer-xl {height:250px;}
+.u-spacer-l {height:200px;}
 .u-spacer-m {height:100px;}
 .u-spacer-s {height:50px;}
