--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -33,7 +33,7 @@
     <div class="main-header">
       <div class="main-header__heading">Hello {{username.title()}}! </div>
       <div class="main-header__time"></div>
-      <div class="main-header__updates">Recent Items</div>
+      <div class="main-header__weather">Recent Items</div>
     </div>
     <div class="main-content">
       <div id="confirmed-graph"></div>
