--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 
 <body class="homepage">
     <div class="marquee"></div>
-    <div class="u-spacer-l">&nbsp;</div>
+    <div class="u-spacer-xl">&nbsp;</div>
     <div class="the5">
         <h2> Do the Five.</h2>
         <div class="the5__items">          
