Updated appearance of time on dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -32,7 +32,10 @@
   <main class="main">
     <div class="main-header">
       <div class="main-header__heading">Hello {{username.title()}}! </div>
-      <div class="main-header__time"></div>
+      <div class="main-header__time-container">
+        <div class="main-header__time"></div>
+      </div>
+      
       <div class="main-header__weather">Recent Items</div>
     </div>
     <div class="main-content">
