--- a/static/sass/pages/_dashboard.scss
+++ b/static/sass/pages/_dashboard.scss
@@ -116,11 +116,28 @@ a.sidenav__brand-link {
     height: 350px;
     background-color: #e3e4e6;
     color: slategray;
-    
-    &__heading {
+
+      &__heading {
       font-size: 1.5rem;
       color: white;
-    }
+      }
+      &__time-container {
+        display:grid;
+        width: 40%;
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-areas:
+          "."
+          "time"
+          ".";
+      }
+      &__time {
+        grid-area: time;
+        text-align: center;
+        font-size: 8rem;
+        color: white;
+        font-weight: bolder;
+        text-shadow: 0 0 5px black;
+      }
   }
 }
 .main-header__heading {
