--- a/static/sass/pages/_homepage.scss
+++ b/static/sass/pages/_homepage.scss
@@ -22,19 +22,20 @@
     text-transform: lowercase;
 
     &__search {
-        font-family: 'Major Mono Display', monospace;
+        font-family: 'Montserrat', sans-serif;
+        grid-area: time;
         width: 70rem;
         font-size: 2rem;
         outline:0;
         border: 0;
-        border-bottom: 2px dotted rgba(0, 0, 0, 0.288);
-        text-transform: lowercase;
+        border-bottom: 2px dotted rgba(0, 0, 0, 0.144);
+        text-transform: uppercase;
 
         &::placeholder {
-            text-transform: lowercase;
+            text-transform: uppercase;
             color: rgba(0, 0, 0, 0.336);
             font-weight: bold;
-            letter-spacing: -.3rem;
+            
         }
         &:focus {
             border-bottom: 2px dotted $color-2;
