--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
 
     <div class="searchbar">
         <form class="searchbar__form" action="/search-results" method="POST">
-            <input class="searchbar__search" action="/search-results" type="text" name="searchbar" placeholder="Enter a county name:">
+            <input class="searchbar__search" action="/search-results" type="text" name="searchbar" placeholder="Enter your county:">
         </form>
     </div>
 
