--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -35,8 +35,10 @@
         {% if counties != None %}
         <div class="results__item--city">
             {{ counties.county_name }}, {{ states }}
-        </div>  
-
+        </div> 
+        {% if session.get('username') %}
+        <button type="submit" class="save-btn" data-save-info="{{ county_state_slug}}">Save</button>
+        {% endif %}
         <div id="chart"></div>  
         
     </div>
@@ -48,10 +50,12 @@
    
     {% block javascript %}
     <script src="https://d3js.org/d3.v5.js" charset="utf-8""></script>
+    <script src="../static/js/save.js"></script>
     <script type="text/javascript">
         let dataset = {{ data | safe }};  
     </script>
     <script src="../static/js/graph.js"></script>
+    
     {% endblock %}
 </div>
 {% endblock %}
