--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -37,7 +37,13 @@
             {{ counties.county_name }}, {{ states }}
         </div> 
         {% if session.get('username') %}
-        <button type="submit" class="save-btn" data-save-info="{{ county_state_slug}}">Save</button>
+           {% if saved == None  %}
+            <button type="submit" class="save" data-save-info="{{ county_state_slug}}">Save</button>
+        
+            {% elif user_id == saved.user_id %}
+            <button type="submit" class="unsave" data-save-info="{{ county_state_slug}}">Unsave</button>
+            {% endif %}
+
         {% endif %}
         <div id="chart"></div>  
         
