Implemented save/unsave button

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -37,12 +37,8 @@
             {{ counties.county_name }}, {{ states }}
         </div> 
         {% if session.get('username') %}
-           {% if saved == None  %}
-            <button type="submit" class="save" data-save-info="{{ county_state_slug}}">Save</button>
-        
-            {% elif user_id == saved.user_id %}
-            <button type="submit" class="unsave" data-save-info="{{ county_state_slug}}">Unsave</button>
-            {% endif %}
+
+            <button type="submit" id="save" data-county-info="{{ county_state_slug}}">Save</button>
 
         {% endif %}
         <div id="chart"></div>  
