Updated font for side nav

--- a/static/sass/pages/_dashboard.scss
+++ b/static/sass/pages/_dashboard.scss
@@ -63,8 +63,7 @@ a.sidenav__brand-link {
   }
 
   .sidenav__list-item {
-    font-family: 'Major Mono Display', monospace;
-    text-transform: lowercase;
+    font-family: 'Courier Prime', monospace;
     padding-left: 30px;
     line-height: 2.5rem;
     color:black;
