--- a/static/css/style.css
+++ b/static/css/style.css
@@ -428,8 +428,7 @@ a.sidenav__brand-link {
   list-style-type: none; }
 
 .sidenav__list-item {
-  font-family: 'Major Mono Display', monospace;
-  text-transform: lowercase;
+  font-family: 'Courier Prime', monospace;
   padding-left: 30px;
   line-height: 2.5rem;
   color: black; }
