--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -7,6 +7,7 @@
 
 @import "components/navbar";
 @import "components/graph";
+@import "components/button";
 
 @import "pages/signup";
 @import "pages/login";
