--- a/templates/search-results.html
+++ b/templates/search-results.html
@@ -40,11 +40,13 @@
         {% elif counties != None %}
             {% for county in counties %}
                 <div class="results__item--city">
-                    {% set county_name = county.county_name.split(" ") %}  
-                    <a href="/search-results" class="county-link" data-county-info="{{ county_name | join("-") }}-{{ county.state_name }}">{{ county.county_name }}, {{county.state_name}} </a>
+                    <a href="/county/{{ county.county_id }}" class="county-link" data-county-id="{{ county.county_id }}">{{ county.county_name }}, {{county.state_name}} </a>
                         </div> 
             {% endfor %}
         {% endif %}
     </div>
 </div>
+{% block javascript %}
+<script src="../static/js/search-results.js"></script>
+{% endblock %}
 {% endblock %}
