--- a/static/sass/pages/_homepage.scss
+++ b/static/sass/pages/_homepage.scss
@@ -21,6 +21,11 @@
     margin: 100px 0;
     text-transform: lowercase;
 
+    &__form {
+        max-width: 70rem;
+        margin: 50px auto;
+      }
+
     &__search {
         font-family: 'Montserrat', sans-serif;
         grid-area: time;
@@ -28,20 +33,77 @@
         font-size: 2rem;
         outline:0;
         border: 0;
-        border-bottom: 2px dotted rgba(0, 0, 0, 0.144);
         text-transform: uppercase;
+        letter-spacing: .5rem;
+        
 
         &::placeholder {
             text-transform: uppercase;
             color: rgba(0, 0, 0, 0.336);
             font-weight: bold;
+
             
         }
         &:focus {
-            border-bottom: 2px dotted $color-2;
+            background-color: #ffc600;
         }     
     }
 }
+
+
+.h1 {
+    background: #ffc600;
+  }
+  
+  .searchbar__suggestions {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    /*perspective: 20px;*/
+  }
+  
+  .searchbar__suggestions li {
+    background: white;
+    list-style: none;
+    border-bottom: 1px solid #D8D8D8;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.14);
+    margin: 0;
+    padding: 20px;
+    transition: background 0.2s;
+    display: flex;
+    justify-content: space-between;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+  }
+  
+  .searchbar__suggestions li:nth-child(even) {
+    transform: perspective(100px) rotateX(3deg) translateY(2px) scale(1.001);
+    background: linear-gradient(to bottom,  #ffffff 0%,#EFEFEF 100%);
+  }
+  
+  .searchbar__suggestions li:nth-child(odd) {
+    transform: perspective(100px) rotateX(-3deg) translateY(3px);
+    background: linear-gradient(to top,  #ffffff 0%,#EFEFEF 100%);
+  }
+
+
+
+  
+  input.searchbar__search{
+    margin: 0;
+    text-align: center;
+    outline: 0;
+    border: 10px solid #F7F7F7;
+    width: 120%;
+    left: -10%;
+    position: relative;
+    top: 10px;
+    z-index: 2;
+    border-radius: 5px;
+    font-size: 40px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19);
+  }
+
 
 
 .the5 {
