--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -45,6 +45,7 @@
     </div>
 </main>
     {% block javascript %}
+    <script src="https://d3js.org/d3.v5.js" charset="utf-8""></script>
     <script src="../static/js/dashboard.js"></script>
     {% endblock %} 
 {% endblock %} <!-- end of block content -->
