--- a/static/css/style.css
+++ b/static/css/style.css
@@ -373,11 +373,12 @@ input.login__item::placeholder {
     font-family: 'Montserrat', sans-serif;
     grid-area: time;
     width: 70rem;
-    font-size: 2rem;
+    font-size: 2.5rem;
     outline: 0;
     border: 0;
     text-transform: uppercase;
-    letter-spacing: .5rem; }
+    letter-spacing: .3rem;
+    text-align: center; }
     .searchbar__search::placeholder {
       text-transform: uppercase;
       color: rgba(0, 0, 0, 0.336);
@@ -392,7 +393,8 @@ input.login__item::placeholder {
   margin: 0;
   padding: 0;
   position: relative;
-  /*perspective: 20px;*/ }
+  /*perspective: 20px;*/
+  text-align: center; }
 
 .searchbar__suggestions li {
   background: white;
@@ -402,8 +404,6 @@ input.login__item::placeholder {
   margin: 0;
   padding: 20px;
   transition: background 0.2s;
-  display: flex;
-  justify-content: space-between;
   text-transform: uppercase;
   letter-spacing: .2rem; }
 
@@ -426,7 +426,6 @@ input.searchbar__search {
   top: 10px;
   z-index: 2;
   border-radius: 5px;
-  font-size: 40px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19); }
 
 .the5 {
