--- a/static/sass/pages/_homepage.scss
+++ b/static/sass/pages/_homepage.scss
@@ -40,21 +40,18 @@
 
         &::placeholder {
             text-transform: uppercase;
-            color: rgba(0, 0, 0, 0.336);
-            font-weight: bold;
-
-            
+            font-weight: bold;         
         }
         &:focus {
             background-color: #ffc600;
+            color: white;
+            font-weight: bold;
         }     
     }
 }
 
 
-.h1 {
-    background: #ffc600;
-  }
+
   
   .searchbar__suggestions {
     margin: 0;
@@ -68,11 +65,10 @@
     background: white;
     list-style: none;
     border-bottom: 1px solid #D8D8D8;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.14);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.12);
     margin: 0;
     padding: 20px;
     transition: background 0.2s;
-
     text-transform: uppercase;
     letter-spacing: .2rem;
     
