--- a/templates/index.html
+++ b/templates/index.html
@@ -43,9 +43,7 @@
     <div class="searchbar">
         <form class="searchbar__form">
             <input class="searchbar__search" type="text" name="search" placeholder="Enter your county or state">
-            <ul class="searchbar__suggestions">
-            
-            </ul>
+            <ul class="searchbar__suggestions"></ul>
         </form>
     </div>
 
